# table2tex

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
src/table2tex/: __init__.py  __main__.py  cli.py  formatter.py  model.py  parser.py  utils.py
tests/: run_test.bat  run_test.sh  sample.csv  sample.md  sample.tex  sample.xlsx
