[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "table2tex"
version = "0.1.0"
description = "Convert tables to LaTeX with automatic best-value highlighting"
requires-python = ">=3.10"
dependencies = [
    "openpyxl>=3.1.0",
]

[project.scripts]
table2tex = "table2tex.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
